# klvparser-c

./: .clang-format  .gitmodules  CMakeLists.txt  Config.h.in  LICENSE  README.md
src/: other_klvparser.c
src/libklv/: libklv.c  libklv.h  list.h
